downward_api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward-env
spec:
  containers:
    - name: flask
      image: ghcr.io/junseokkim/downward_api:latest
      ports:
        - containerPort: 5000
