edu4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu4
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edu4
  template:
    metadata:
      labels:
        app: edu4
    spec:
      containers:
        - name: edu4
          image: ghcr.io/shclub/edu4:v1
          ports:
            - containerPort: 5000
