flask_edu_4_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-edu-4
  namespace: default
spec:
  selector:
    app: edu4
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
